added keycloak for authenticating and authorizing the correct user

--- a/src/ApiGateways/YarpApiGateway/appsettings.json
+++ b/src/ApiGateways/YarpApiGateway/appsettings.json
@@ -13,14 +13,16 @@
         "Match": {
           "Path": "/catalog-service/{**catch-all}"
         },
-        "Transforms": [ { "PathPattern": "{**catch-all}" } ]
+        "Transforms": [ { "PathPattern": "{**catch-all}" } ],
+        "AuthorizationPolicy": "eShoppingPolicy"
       },
       "basket-route": {
         "ClusterId": "basket-cluster",
         "Match": {
           "Path": "/basket-service/{**catch-all}"
         },
-        "Transforms": [ { "PathPattern": "{**catch-all}" } ]
+        "Transforms": [ { "PathPattern": "{**catch-all}" } ],
+        "AuthorizationPolicy": "eShoppingPolicy"
       },
       "ordering-route": {
         "ClusterId": "ordering-cluster",
@@ -28,7 +30,8 @@
         "Match": {
           "Path": "/ordering-service/{**catch-all}"
         },
-        "Transforms": [ { "PathPattern": "{**catch-all}" } ]
+        "Transforms": [ { "PathPattern": "{**catch-all}" } ],
+        "AuthorizationPolicy": "eShoppingPolicy"
       }
     },
     "Clusters": {
@@ -54,5 +57,16 @@
         }
       }
     }
+  },
+  "Keycloak": {
+    "realm": "eShoppingRealm",
+    "auth-server-url": "http://localhost:9090/",
+    "ssl-required": "none",
+    "resource": "eShoppingClient",
+    "verify-token-audience": false,
+    "credentials": {
+      "secret": ""
+    },
+    "confidential-port": 0
   }
 }
