--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -7,6 +7,9 @@ services:
   basketdb:
     image: postgres
 
+  identitydb:
+    image: postgres
+     
   distributedcache:
     image: redis
 
@@ -45,10 +48,15 @@ services:
     build:
       context: .
       dockerfile: ApiGateways/YarpApiGateway/Dockerfile
+  
+  identity:
+    image: quay.io/keycloak/keycloak:24.0.3
 
 volumes:
   postgres_catalog:
   postgres_basket:
+  postgres_identity:  
+
 
 
 
